# my-blog

./: .gitignore  index.html
assets/: index-BNin40gG.js  index-C3SY-EjB.js  index-Czf9_AZu.js
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3d65892d4511_init.py
backend/app/: config.py  database.py  main.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  article.py  comment.py  user.py
backend/app/routers/: admin.py  articles.py  auth.py  comments.py
backend/app/schemas/: article.py  comment.py  user.py
backend/app/services/: article_service.py  auth_service.py  comment_service.py
backend/app/utils/: pagination.py  security.py
backend/scripts/: create_admin.py
frontend/: .env.production  package-lock.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: articles.ts  auth.ts  client.ts  comments.ts
frontend/src/components/: CommentSection.tsx  Layout.tsx  MarkdownEditor.tsx  MarkdownRenderer.tsx  Pagination.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: ArticlePage.tsx  HomePage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/pages/admin/: ArticleEditor.tsx  ArticleList.tsx  CommentList.tsx  DashboardHome.tsx  DashboardLayout.tsx
frontend/src/types/: index.ts
