[project]
name = "blog-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
    "aiomysql>=0.2",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0,<4.1",
    "pydantic-settings>=2.7",
    "python-slugify>=8.0",
    "markdown-it-py>=3.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.28",
]
